// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter renders filter dropdown 1`] = `
<div
  class="dropdown"
  data-test-id="filter-dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="dropdown-toggle btn btn-light"
    id="filter-by-category-button"
    type="button"
  >
    Filter by category
  </button>
</div>
`;

exports[`Filter renders filter options when dropdown is clicked 1`] = `
<div
  class="show dropdown"
  data-test-id="filter-dropdown"
>
  <button
    aria-expanded="true"
    aria-haspopup="true"
    class="dropdown-toggle btn btn-light"
    id="filter-by-category-button"
    type="button"
  >
    Filter by category
  </button>
  <div
    aria-labelledby="filter-by-category-button"
    class="dropdown-menu show"
    style="position: absolute; top: 0px; left: 0px; margin: 0px; transform: translate(0px, 0px);"
    x-placement="bottom-start"
  >
    
    <button
      class="dropdown-item"
      name="bar"
    >
      bar
    </button>
    <button
      class="dropdown-item"
      name="foo"
    >
      foo
    </button>
  </div>
</div>
`;
